<resources>
    <string name="app_name">BoardGame</string>
    <string name="logo">Logo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="reset">Reset</string>
    <string name="player1_0">Player1: 0</string>
    <string name="player2_0">Player2: 0</string>
    <string name="_8_puzzle_game">8-Puzzle Game</string>
    <string name="settings">Settings</string>
    <string name="tentang_boardgame">Tentang BoardGame</string>
    <string name="sudoku_game">Sudoku Game</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="notes">Notes</string>
    <string name="delete">Delete</string>
    <string name="catch_the_ball">Catch The Ball</string>
    <string name="score_0">Score: 0</string>
    <string name="player">Player</string>
    <string name="spark">Spark</string>
    <string name="green">Green</string>
    <string name="blue">BLue</string>
    <string name="high_score">High Score</string>
    <string name="start">Start</string>
    <string name="snake_game">Snake Game</string>
    <string name="current_score">Current Score：</string>
    <string name="restart">Restart</string>
    <string name="back">Back</string>
    <string name="pause">Pause</string>
    <string name="_2048_puzzle">2048 Puzzle</string>
</resources>
