<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        style="@style/Widget.Design.AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_catchBall"
        android:layout_above="@id/btn_tic_tac_toe"
        android:layout_marginStart="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/catch_the_ball"
        android:textAllCaps="false"
        android:textAppearance="?attr/textAppearanceButton"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_tic_tac_toe"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="70dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/tic_tac_toe"
        android:textAllCaps="false"
        android:textAppearance="?attr/textAppearanceButton"
        android:textSize="18sp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_8puzzle"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="70dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/_8_puzzle_game"
        android:layout_below="@id/btn_tic_tac_toe"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textAppearance="?attr/textAppearanceButton"
        android:textSize="18sp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sudoku"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="70dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sudoku_game"
        android:layout_below="@id/btn_8puzzle"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textAppearance="?attr/textAppearanceButton"
        android:textSize="18sp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_snake"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="70dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/snake_game"
        android:layout_below="@id/btn_sudoku"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textAppearance="?attr/textAppearanceButton"
        android:textSize="18sp"/>
</RelativeLayout>